# MAF-Agents

./: .gitignore  README.md
AgentFrameworkQuickStart/: AgentFrameworkQuickStart.csproj  AgentFrameworkQuickStart.sln  Program.cs  README.md  appsettings.json
AgentId/: .gitignore  AgentId.sln  README.md  azure.yaml  bot-oauth-output-20260213-163034.txt
AgentId/OneDriveAgent/: OneDriveAgent.csproj  Program.cs  README.md  appsettings.Development.json.template  appsettings.json
AgentId/infra/: main.bicep  main.json  main.parameters.json
AgentId/scripts/: 00-admin-cleanup.sh  01-admin-create-apps.sh  02-dev-generate-handoff.sh  03-admin-create-fic.sh  04-admin-bot-oauth.sh  05-dev-teams-manifest.sh  cleanup-deploy.sh
AgentId/src/: agent_manager.py  pyproject.toml
AgentId/teams-manifest/: manifest.json.template
DurableAgent/: README.md  durable-agents-quickstart-dotnet.csproj  host.json  test.sample.http
Foundry-IaC-Agent/: README.md  azure.yaml
Foundry-IaC-Agent/infra/: main.bicep  main.json
Foundry-IaC-Agent/src/: README.md  agent_manager.py  pyproject.toml
Foundry-IaC-Agent/src/docs/: product_manual.md
FoundryPersistentAgent/: FoundryPersistentAgent.csproj  FoundryPersistentAgent.sln  FoundryPersistentChatClient.cs  Program.cs  README.md  appsettings.json
LastingFoundryPersistentAgent/: .gitignore  README.md  azure.yaml
MAF-M365-Copilot-Agent/: .gitignore  AzuriteConfig  BotTokenValidator.cs  MAF-M365-Copilot-Agent.csproj  MAFAdapter.cs  MAFAgentApplication.cs  Program.cs  README.md  WeatherAgent.cs  appsettings.json  azure.yaml  host.json
(+35 files in other folders)
